# FilesBackup

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.user.1e100e4  CMakeLists.txt.user.a6dbbf8  README.md  config.json  dockerfile  test.c
.github/workflows/: cpp-ci-actions.yml
BackupGUI/: CMakeLists.txt  backupconfigdialog.cpp  backupconfigdialog.h  backupconfigdialog.ui  fileexplore.cpp  fileexplore.h  input_dialog.h  main.cpp  mainform.cpp  mainform.h  mainform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.h  mydialog.cpp  mydialog.h  mydialog.ui  resource.qrc  util.cpp  util.h
BackupServer/: CMakeLists.txt
BackupServer/include/: backup.h  backup_check.h  backup_impl.h  compress.h  config.h  encrypt.h  error_code.h  file_check.h  file_meta.h  file_sys.h  file_tree.h  haffman.h  pack.h  pack_impl.h  schedule_task.h
BackupServer/src/: CMakeLists.txt  backup_check.cpp  backup_impl.cpp  compress.cpp  config.cpp  encrypt.cpp  error_code.cpp  file_meta.cpp  file_sys.cpp  file_tree.cpp  haffman.cpp  main.cpp  pack_impl.cpp  schedule_task.cpp
BackupServer/test/: CMakeLists.txt  add_test.cpp  backup_test.cpp  encrypt_test.cpp  error_code_test.cpp  file_check_test.cpp  file_meta_test.cpp  file_sys_test.cpp  file_tree_test.cpp  haffman_test.cpp  schedule_task_test.cpp  test_main.cpp
include/: backup.h  backup_impl.h  encrypt.h  file_meta.h  file_sys.h  file_tree.h  haffman.h  helper_c.h  pack.h  pack_impl.h  utils.h
src/: backup_impl.cc  backup_impl.cpp  compress.cpp  encrypt.cpp  file_meta.cpp  file_sys.cpp  file_tree.cpp  haffman.cpp  helper_c.c  main.cc  main.cpp  pack.cc  pack_impl.cpp
test/: add_test.cc  add_test.cpp  backup_test.cc  backup_test.cpp  compress.h  encrypt_test.cpp  file_meta_test.cpp  file_sys_test.cpp  file_tree_test.cpp  haffman_test.cpp  pack_test.cpp  test_main.cpp
